# Repository-name-Recongraph

./: BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  consolidate_docs.py  fix_mypy.py  fix_mypy_v2.py  fix_v3.py  generate_docs.py  pyproject.toml  quickstart.py  refactor_providers.py  repomix-output.md  scratch_canonical_study.py  scratch_float.py  stage5c1_refactor.py  stage_8c_t1_tax_identity_falsification_report.md  stage_8c_t2_certification_audit.md  stage_8c_t2_r1_verification_materialization_report.md
docs/: ADR-014-explainability-architecture.md  ADR-015-provenance-contract.md  API.md  ARCHITECTURE.md  DIFFERENTIAL_REPORT_v1.md  SECURITY.md  explainability.md  provenance.md  traceability.md
experiments/: audit_vendor_normalization_information_loss.py  benchmark_vendor_parse_reuse.py  compare_reference_identity_extraction.py  compare_tax_penalty_models.py  design_exact_reference_fallback.py  design_reference_evidence_ordering.py  design_reference_interpretation_contract.py  evaluate_corpus_reference_informativeness.py  evaluate_gstin_identity_cases.py  evaluate_purchase_gst_baseline.py  evaluate_purchase_gst_challenges.py  evaluate_reference_discriminative_strength.py  evaluate_reference_interpretation_state.py  evaluate_reference_rarity_magnitude.py  evaluate_reference_structural_fallback_inputs.py  evaluate_reference_structural_magnitude.py  evaluate_reference_token_cooccurrence.py  evaluate_vendor_acronym_collisions.py  evaluate_vendor_authority_conflicts.py  evaluate_vendor_common_token_collisions.py  generate_t1_report.py  (+15 more)
(+319 files in other folders)
