[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recongraph"
version = "0.1.0"
description = "An explainable financial exception investigation and reconciliation engine."
requires-python = ">=3.11"
dependencies = [
    "rapidfuzz>=3.14,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
    "hypothesis>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
